--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,15 @@
-.App {
-  text-align: center;
+*, *::after, *::before{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.wrapp{
+  margin: 0 auto;
+  width: 1124px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.SiteBar__Main{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row nowrap;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
