--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
-margin-top: 5px;
-    background-color:#089baf;
+    margin-top: 5px;
+    background-color:#16ad9f;
 }
 .footer p{
     font-size: 18px;
