--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,10 +3,10 @@
     justify-content: space-between;
     flex-flow: row nowrap;
     align-items: center;
-    background-color: #089baf;
+    background-color: #16ad9f;
     width: 100%;
     padding: 5px;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
     /* height: 100px; */
   }
   .logo{
