new file on dialog

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -2,6 +2,7 @@
 display: flex;
 flex-flow: column nowrap;
 align-items: flex-start;
+
 padding: 5px;
 border: 1px solid  #ccc;        
 }
@@ -12,4 +13,8 @@ border: 1px solid  #ccc;
 }
 .dialogsBlock{
     display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    width: 100%;
+
 }
