--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -18,3 +18,19 @@ border: 1px solid  #ccc;
     width: 100%;
 
 }
+.users{
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+    min-width: 30%;
+    flex-basis: 30%;
+    border-right: 1px solid #ccc;
+}
+.masseges{
+    display: flex;
+    flex-flow: column nowrap;
+    max-width: 70%;
+    flex-basis: 68%;
+    justify-content: flex-start;
+}
