--- a/src/components/SiteBar/SiteBar.module.css
+++ b/src/components/SiteBar/SiteBar.module.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
-    
 }
 
 .nav{
@@ -13,6 +12,7 @@
 .list{
     list-style: none;
     margin: 0;
+    margin-top: 20px;
     padding: 0;
     
 }
